<resources>
    <string name="app_name">Asisten Skripsi TE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_panduan_skripsi">Panduan\nSkripsi</string>
    <string name="text_pengajuan_topik">Pengajuan\nTopik</string>
    <string name="text_kontak_jurusan">Kontak\nJurusan</string>
    <string name="text_metode_penelitian">Metode\nPenelitian</string>
    <string name="development_by">Development By :\nM. Rizqi Fakhri K. (5302419020)\nRizqifakhri@students.unnes.ac.id</string>
    <string name="hubungi_jurusan">Hubungi Jurusan</string>
    <string name="desc_ref">Buku Panduan Skripsi Universitas Negeri Semarang (UNNES) Edisi 2022</string>
    <string name="desc_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin mi nec aliquam maximus. Nam venenatis, massa at maximus accumsan, magna metus venenatis neque, eget scelerisque urna nunc id elit. Integer consequat ex id dui placerat tempor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin mi nec aliquam maximus. Nam venenatis, massa at maximus accumsan, magna metus venenatis neque, eget scelerisque urna nunc id elit. Integer consequat ex id dui placerat tempor. Nam sollicitudin mi nec aliquam maximus. Nam venenatis, massa at maximus accumsan, magna metus venenatis neque, eget scelerisque urna nunc id elit. Integer consequat ex id dui placerat tempor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin mi nec aliquam maximus. Nam venenatis, massa at maximus accumsan, magna metus venenatis neque, eget scelerisque urna nunc id elit. Integer consequat ex id dui placerat tempor.</string>
</resources>